src/test/ui/async-await/issue-61076.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/issue-61076.rs:42:5
   |
LL |     foo()?;
   |     ^^^^^^ the `?` operator cannot be applied to type `impl Future`
   |
   = help: the trait `Try` is not implemented for `impl Future`
   = note: required by `into_result`
help: consider `await`ing on the `Future`
   |
LL |     foo().await?;
   |          ^^^^^^

error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/issue-61076.rs:56:5
   |
LL |     t?;
   |     ^^ the `?` operator cannot be applied to type `T`
   |
   = help: the trait `Try` is not implemented for `T`
   = note: required by `into_result`
help: consider `await`ing on the `Future`
   |
LL |     t.await?;
   |      ^^^^^^

error[E0609]: no field `0` on type `impl Future`
  --> $DIR/issue-61076.rs:58:26
   |
LL |     let _: i32 = tuple().0;
   |                          ^

error[E0609]: no field `a` on type `impl Future`
  --> $DIR/issue-61076.rs:60:28
   |
LL |     let _: i32 = struct_().a;
   |                            ^

error[E0599]: no method named `method` found for opaque type `impl Future` in the current scope
  --> $DIR/issue-61076.rs:62:15
   |
LL |     struct_().method();
   |               ^^^^^^ method not found in `impl Future`

error[E0308]: mismatched types
  --> $DIR/issue-61076.rs:69:9
   |
LL | async fn tuple() -> Tuple {
   |                     ----- the `Output` of this `async fn`'s expected opaque type
...
LL |         Tuple(_) => {}
   |         ^^^^^^^^ expected opaque type, found struct `Tuple`
   |
   = note: expected opaque type `impl Future`
                   found struct `Tuple`
help: consider `await`ing on the `Future`
   |
LL |     match tuple().await {
   |                  ^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308, E0599, E0609.
For more information about an error, try `rustc --explain E0277`.
